# SparkyBasic

./: .clang-tidy
.cache/clangd/index/: command.cpp.4DB8BFD457A05A47.idx  command.hpp.4AF36CA1F7064153.idx  evalenv.hpp.C56A5AEFE7296095.idx  main.cpp.15F896146CFE066F.idx  myframe.hpp.E089B308595B087B.idx  parse.cpp.227C17765F1C3151.idx  parse.hpp.3F02FAAFD0BBCAE0.idx  token.cpp.33580D78AC2F01E8.idx  token.hpp.036E76A8BABC970E.idx
src/: CMakeLists.txt  command.cpp  command.hpp  command_list.cpp  command_list.hpp  defs.hpp  evalenv.hpp  interpreter.hpp  interpreter_new.cpp  main.cpp  memory.hpp  myframe.cpp  myframe.hpp  replgui.hpp  replgui_init.cpp  replgui_on_enter.cpp  send_command.cpp
src/basic/: CMakeLists.txt  command.cpp  command.hpp  error_messages.hpp  parse.cpp  parse_token.cpp  parse_token.hpp  token.cpp  token.hpp
src/basic/lexer/: CMakeLists.txt  lex_token.hpp  token.hpp
src/lexer/: error_messages.hpp  lex_line.cpp  lex_line.hpp  lex_literals.cpp  lex_literals.hpp  lex_token.cpp  lex_token.hpp  token.cpp  token.hpp  token_repr.cpp
